# DjangoCRMProject

./: README.md  manage.py  pyproject.toml  pytest.ini
DjangoCRMProject/: asgi.py  settings.py  urls.py  wsgi.py
DjangoCRMProject/settings/: base.py  development.py  production.py
leads/: models.py  urls.py  views.py
leads/migrations/: 0001_initial.py
templates/leads/: home_page.html  lead_detail.html  lead_list.html
tests/functional_tests/: fun_test.py
