[tool.poetry]
name = "djangocrmproject"
version = "0.1.0"
description = ""
authors = ["vikornienko <vikornienko76@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
sentry-sdk = "^1.9.8"
django-debug-toolbar = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pytest-selenium = "^3.0.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

